--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Ehliyet Cepte</string>
     <string name="question_option_format">%1$s) %2$s</string>
+    <string name="question_index_format">%1$d/%2$d</string>
 </resources>
